Try different different boat in telegram for storage ke liye alag and ve

--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,9 @@
   "functions": {
     "src/app/**/*.ts": {
       "maxDuration": 120
+    },
+    "src/app/api/**/*.ts": {
+      "maxDuration": 120
     }
   }
 }
