--- a/package.json
+++ b/package.json
@@ -4,14 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 9002",
-
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -34,12 +32,12 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@vercel/kv": "^2.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.6.0",
-
     "lucide-react": "^0.475.0",
     "next": "^15.3.3",
     "patch-package": "^8.0.0",
@@ -56,7 +54,6 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
