--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@upstash/redis": "^1.35.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "crypto-js": "^4.2.0",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.6.0",
