Integrate Neon PostgreSQL database for user authentication

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ TELEGRAM_CHAT_ID=-1002908996818
 NEXT_PUBLIC_APP_URL=https://digiunlim-cloud.vercel.app
 UPSTASH_REDIS_REST_URL=https://helped-caiman-18817.upstash.io
 UPSTASH_REDIS_REST_TOKEN=AkmBAAIgcDIDbCxlSD38VKunHEfs6p4i9QW_6JHufFRarIh5b0VvgQ
+DATABASE_URL=postgresql://neondb_owner:npg_3WGUQdZ2iqat@ep-dark-term-a11uulvb-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require
